plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repository.mercadopago.com/release' }
}


dependencies {
	//JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	//SPRING WEB
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//LOMBOK
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//H2 DATABASE
	runtimeOnly 'com.h2database:h2'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//MAPSTRUCT
	implementation 'org.mapstruct:mapstruct:1.5.5.Final'

	annotationProcessor 'org.projectlombok:lombok', 'org.mapstruct:mapstruct-processor:1.5.5.Final'

	//OPEN API
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'

	// JACKSON DATATYPE JSR310
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// MERCADO PAGO
	implementation 'com.mercadopago:sdk-java:2.1.24'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.hibernate.orm:hibernate-envers:6.4.4.Final'

	// Apache POI dependencies
	implementation 'org.apache.poi:poi:5.2.3'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'

	// iText dependencies
	implementation 'com.lowagie:itext:2.1.7'

	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.3.0'

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'com.nimbusds:nimbus-jose-jwt:9.23'
	testImplementation 'org.springframework.security:spring-security-test'

}

tasks.named('test') {
	useJUnitPlatform()
}


tasks.jar {
	enabled = true
}

bootJar {
	enabled = true
}